# commerce-orchestrator-api

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: audit.yml  ci.yml
crates/integration-adapters/: Cargo.toml
crates/integration-adapters/src/: catalog.rs  client.rs  error.rs  geo.rs  lib.rs  payment.rs  pricing.rs  receipt.rs  tax.rs
crates/integration-adapters/tests/: adapters_http_test.rs  catalog_http_test.rs
crates/orchestrator-api/: Cargo.toml
crates/orchestrator-api/src/: adapters.rs  ap2_verification.rs  authn.rs  authz.rs  facade.rs  lib.rs  pii.rs  ucp_mapping.rs
crates/orchestrator-api/tests/: authz_and_adapters.rs  orchestrator_flow.rs  persistent_restart_recovery.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: capability.rs  contract.rs  lib.rs  policy.rs  state_machine.rs  validation.rs
crates/orchestrator-http/: Cargo.toml
crates/orchestrator-http/src/: app.rs  auth.rs  config.rs  dto.rs  error.rs  lib.rs  main.rs  observability.rs  state.rs
crates/orchestrator-http/src/routes/: discovery.rs  health.rs  mod.rs  v1.rs
crates/orchestrator-http/tests/: api_integration_test.rs  discovery_test.rs
crates/orchestrator-observability/: Cargo.toml
crates/orchestrator-observability/src/: audit.rs  lib.rs  tracing_ext.rs
crates/orchestrator-runtime/: Cargo.toml
crates/orchestrator-runtime/src/: commit.rs  effects.rs  events.rs  idempotency.rs  inventory.rs  lib.rs  order.rs  payment_state.rs  runner.rs  store_error.rs  store_traits.rs
crates/orchestrator-runtime/src/persistence/: file_backed.rs  mod.rs
crates/orchestrator-runtime/tests/: outbox_delivery_test.rs
crates/provider-contracts/: Cargo.toml
crates/provider-contracts/src/: catalog.rs  geo.rs  lib.rs  payment.rs  pricing.rs  receipt.rs  tax.rs
crates/provider-mocks/: Cargo.toml
crates/provider-mocks/src/: catalog.rs  geo.rs  lib.rs  payment.rs  pricing.rs  receipt.rs  tax.rs
deploy/: README.md
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  network-policy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: consumer-integration.md  consumption-guide.md  plug-and-deploy.md  release-checklist.md
docs/runbooks/: dead-letter-handling.md  reconciliation.md  retries-and-outbox.md
docs/standards/: conformance-matrix.md
examples/consumer_example/: Cargo.toml  README.md
examples/consumer_example/src/: lib.rs  main.rs  providers.rs
examples/consumer_example/tests/: happy_path_checkout_test.rs
examples/happy_path/: Cargo.toml
examples/happy_path/src/: main.rs
