[package]
name = "orchestrator-runtime"
version.workspace = true
edition.workspace = true
description = "Durable execution runner, idempotency, retries, and timeout handling"

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
provider-contracts = { path = "../provider-contracts" }
orchestrator-observability = { path = "../orchestrator-observability" }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
provider-mocks = { path = "../provider-mocks" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
