[package]
name = "provider-contracts"
version.workspace = true
edition.workspace = true
description = "Trait interfaces for catalog, pricing, tax, payment, geo, and receipt providers"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
orchestrator-core = { path = "../orchestrator-core" }

[lints]
workspace = true
